# photo-organiser

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PRD.md  PROGRESS.md  README.md  initial_idea.md  main.py  pyproject.toml
scripts/: __init__.py  generate_test_photos.py  init_db_smoke.py  run_smoke.py  service_smoke.py
src/photo_organiser/: __init__.py  __main__.py  cli.py
src/photo_organiser/config/: settings.py  settings.py.bak
src/photo_organiser/core/: database.py
src/photo_organiser/models/: database.py
src/photo_organiser/services/: photo_service.py
test_photos/: readme_photo.md  test.txt
tests/: conftest.py  test_database.py  test_photo_service.py  test_settings.py
